<resources>

    <!-- Global -->
    <string name="app_name">DebtFriend</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="yes">Yes</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="no_thanks">No, thanks</string>

    <!-- View start default-->
    <string name="view_start_button_register">Register</string>
    <string name="view_start_button_login">Log in</string>

    <!-- View home -->
    <string name="view_start_button_add_friend">Add friend</string>
    <string name="view_home_button_friends">Friends</string>

    <!-- Debt -->

    <!-- Registration view -->
    <string name="view_registration_input_username">Username</string>
    <string name="view_registration_input_email">Email address</string>
    <string name="view_registration_input_password">Password</string>
    <string name="view_registration_input_button">Create account</string>
    <string name="view_registration_loading">Loading</string>
    <string name="view_registration_no_internet">Internet connection is required to create an account.</string>
    <string name="view_registration_fill_all_fields">Fill in all fields.</string>
    <string name="view_registration_must_be_six_or_longer">Password must be six characters or longer.</string>


    <!-- Login view -->
    <string name="view_login_input_username_or_email">Username or email address</string>
    <string name="view_login_input_password">Password</string>
    <string name="view_login_button_login">Log in</string>
    <string name="view_login_loading_text">Hang on...</string>
    <string name="view_login_no_internet">Internet connection is required when logging in the first time.</string>
    <string name="view_login_fill_all_fields">Fill in all fields.</string>
</resources>
