<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/view_login_input_username_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/view_login_input_username_or_email"/>

    <EditText
        android:id="@+id/view_login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:hint="@string/view_login_input_password"/>

    <Button
        android:id="@+id/view_login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_login_button_login"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="right" />

</LinearLayout>

